--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,4 +1,4 @@
-name: CI - Build Docker image
+name: CI - SAST + SCA + Build Docker
 
 on:
   push:
@@ -6,9 +6,40 @@ on:
   pull_request:
 
 jobs:
+  # 1) SAST con Semgrep
+  sast:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Run Semgrep (SAST) and generate JSON report
+        run: |
+          docker run --rm -v "${PWD}:/src" returntocorp/semgrep semgrep \
+            --config=p/default \
+            --json \
+            -o /src/semgrep_results.json \
+            /src
+
+      - name: Upload Semgrep results to DefectDojo
+        env:
+          DEFECTDOJO_URL: ${{ secrets.DEFECTDOJO_URL }}
+          DEFECTDOJO_API_KEY: ${{ secrets.DEFECTDOJO_API_KEY }}
+          DEFECTDOJO_ENGAGEMENT_ID: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
+        run: |
+          curl -X POST "${DEFECTDOJO_URL%/}/api/v2/import-scan/" \
+            -H "Authorization: Token ${DEFECTDOJO_API_KEY}" \
+            -F "scan_type=Semgrep JSON Report" \
+            -F "engagement=${DEFECTDOJO_ENGAGEMENT_ID}" \
+            -F "file=@semgrep_results.json" \
+            -F "minimum_severity=Low" \
+            -F "active=true" \
+            -F "verified=false"
+
+  # 2) Build de la imagen Docker (solo si SAST pasa)
   build:
     runs-on: ubuntu-latest
-
+    needs: sast
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -16,3 +47,41 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t devsecops-nginx ./docker/nginx
+
+  # 3) SCA de la imagen con Trivy + envío a DefectDojo (también depende de SAST)
+  sca:
+    runs-on: ubuntu-latest
+    needs: sast
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      # Volvemos a construir la imagen en este job (los runners no comparten docker cache)
+      - name: Build Docker image for SCA
+        run: |
+          docker build -t devsecops-nginx ./docker/nginx
+
+      - name: Run Trivy (SCA) and generate JSON report
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'image'
+          image-ref: 'devsecops-nginx:latest'
+          format: 'json'
+          output: 'trivy_results.json'
+          ignore-unfixed: true
+
+      - name: Upload Trivy results to DefectDojo
+        env:
+          DEFECTDOJO_URL: ${{ secrets.DEFECTDOJO_URL }}
+          DEFECTDOJO_API_KEY: ${{ secrets.DEFECTDOJO_API_KEY }}
+          DEFECTDOJO_ENGAGEMENT_ID: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
+        run: |
+          curl -X POST "${DEFECTDOJO_URL%/}/api/v2/import-scan/" \
+            -H "Authorization: Token ${DEFECTDOJO_API_KEY}" \
+            -F "scan_type=Trivy Scan" \
+            -F "engagement=${DEFECTDOJO_ENGAGEMENT_ID}" \
+            -F "file=@trivy_results.json" \
+            -F "minimum_severity=Low" \
+            -F "active=true" \
+            -F "verified=false"
+
