--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -22,19 +22,20 @@ jobs:
             /src
 
       - name: Upload Semgrep results to DefectDojo
+        continue-on-error: true
         env:
           DEFECTDOJO_URL: ${{ secrets.DEFECTDOJO_URL }}
           DEFECTDOJO_API_KEY: ${{ secrets.DEFECTDOJO_API_KEY }}
           DEFECTDOJO_ENGAGEMENT_ID: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
         run: |
-          curl -X POST "${DEFECTDOJO_URL%/}/api/v2/import-scan/" \
+          curl -v -X POST "${DEFECTDOJO_URL%/}/api/v2/import-scan/" \
             -H "Authorization: Token ${DEFECTDOJO_API_KEY}" \
             -F "scan_type=Semgrep JSON Report" \
             -F "engagement=${DEFECTDOJO_ENGAGEMENT_ID}" \
             -F "file=@semgrep_results.json" \
             -F "minimum_severity=Low" \
             -F "active=true" \
-            -F "verified=false"
+            -F "verified=false" || echo "No se pudo conectar a DefectDojo (normal desde GitHub-hosted)."
 
   # 2) Build de la imagen Docker (solo si SAST pasa)
   build:
