cambios solo revisar app

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -19,7 +19,8 @@ jobs:
             returntocorp/semgrep semgrep scan \
             --config=auto \
             --json \
-            --output=/src/semgrep-report.json
+            --output=/src/semgrep-report.json \
+            /src/app
 
       - name: Upload SAST Report
         uses: actions/upload-artifact@v4
@@ -38,7 +39,7 @@ jobs:
         run: |
           docker run --rm \
             -v ${{ github.workspace }}:/src \
-            aquasec/trivy fs /src \
+            aquasec/trivy fs /src/app \
             --format json \
             --output /src/trivy-fs-report.json
 
