--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -1,4 +1,4 @@
-name: DevSecOps Automation
+name: SecureShift Security Pipeline
 
 on:
   push:
@@ -7,13 +7,60 @@ on:
     branches: [ "main", "master" ]
 
 jobs:
-  security-pipeline:
-    name: 🛡️ Security Scan & Report
-    # ⚠️ PARA MODO "MAGIC SYNC" (Actualización local automática):
-    # Cambia 'ubuntu-latest' por 'self-hosted' y configura el runner en tu máquina.
+  # ═══════════════════════════════════════════════════════════════
+  # SAST - Static Application Security Testing (Code Analysis)
+  # ═══════════════════════════════════════════════════════════════
+  sast:
+    name: "🔍 SAST (Code Analysis)"
     runs-on: ubuntu-latest
-    # runs-on: self-hosted 
-    
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
+      - name: 🛡️ Run Semgrep SAST Scan
+        run: |
+          mkdir -p dashboard/data
+          docker run --rm -v "${PWD}:/src" returntocorp/semgrep:latest \
+            semgrep scan --config=auto --json --output=/src/dashboard/data/semgrep-report.json /src/app || true
+          echo "✅ SAST scan complete"
+
+      - name: 📤 Upload SAST Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: sast-report
+          path: dashboard/data/semgrep-report.json
+          retention-days: 5
+
+  # ═══════════════════════════════════════════════════════════════
+  # SCA Repo - Software Composition Analysis (Dependencies)
+  # ═══════════════════════════════════════════════════════════════
+  sca-repo:
+    name: "📦 SCA (Repository Dependencies)"
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
+      - name: 🔎 Run Trivy Filesystem Scan
+        run: |
+          mkdir -p dashboard/data
+          docker run --rm -v "${PWD}:/src" aquasec/trivy:latest \
+            fs --format json --output /src/dashboard/data/trivy-fs-report.json /src || true
+          echo "✅ SCA (Repo) scan complete"
+
+      - name: 📤 Upload SCA Repo Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: sca-repo-report
+          path: dashboard/data/trivy-fs-report.json
+          retention-days: 5
+
+  # ═══════════════════════════════════════════════════════════════
+  # SCA Container - Container Image Vulnerability Scan
+  # ═══════════════════════════════════════════════════════════════
+  sca-container:
+    name: "🐳 SCA (Container Image)"
+    runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout Code
         uses: actions/checkout@v4
@@ -21,15 +68,60 @@ jobs:
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🔍 Run Complete Security Scan
+      - name: 🏗️ Build Docker Image
         run: |
-          chmod +x scan.sh
-          ./scan.sh --ci
-      
-      - name: 📊 Upload Security Dashboard & Report
-        if: always()
+          docker build -t secureshift:scan .
+
+      - name: 🔎 Run Trivy Image Scan
+        run: |
+          mkdir -p dashboard/data
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v "${PWD}:/src" aquasec/trivy:latest \
+            image --format json --output /src/dashboard/data/trivy-image-report.json secureshift:scan || true
+          echo "✅ SCA (Container) scan complete"
+
+      - name: 📤 Upload SCA Container Report
         uses: actions/upload-artifact@v4
         with:
-          name: security-dashboard-data
-          path: dashboard/data/
+          name: sca-container-report
+          path: dashboard/data/trivy-image-report.json
           retention-days: 5
+
+  # ═══════════════════════════════════════════════════════════════
+  # Aggregate - Combine all reports for dashboard
+  # ═══════════════════════════════════════════════════════════════
+  aggregate-reports:
+    name: "📊 Aggregate Dashboard Data"
+    runs-on: ubuntu-latest
+    needs: [sast, sca-repo, sca-container]
+    if: always()
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
+      - name: 📥 Download SAST Report
+        uses: actions/download-artifact@v4
+        with:
+          name: sast-report
+          path: dashboard/data/
+        continue-on-error: true
+
+      - name: 📥 Download SCA Repo Report
+        uses: actions/download-artifact@v4
+        with:
+          name: sca-repo-report
+          path: dashboard/data/
+        continue-on-error: true
+
+      - name: 📥 Download SCA Container Report
+        uses: actions/download-artifact@v4
+        with:
+          name: sca-container-report
+          path: dashboard/data/
+        continue-on-error: true
+
+      - name: 📊 Upload Complete Dashboard Data
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-dashboard-complete
+          path: dashboard/data/
+          retention-days: 30
