--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,65 @@
-# Logs
-*.log
+# ═══════════════════════════════════════════════════════════════
+# SecureShift .gitignore
+# ═══════════════════════════════════════════════════════════════
+
+# ══════════════ Node.js ══════════════
+node_modules/
+.pnp
+.pnp.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Dependencies
-node_modules/
-.pnp
-.pnp.js
+# ══════════════ Python ══════════════
+venv/
+.venv/
+env/
+.env/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Next.js
+# ══════════════ Next.js / React ══════════════
 .next/
 out/
-build/
-dist/
 
-# Security Reports & Data
-dashboard/data/*.json
-dashboard/data/*.html
-*.tar
-
-
-# Env
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDEs
+# ══════════════ IDE / Editor ══════════════
 .vscode/
 .idea/
 *.swp
 *.swo
+*.sublime-*
 
-# System
+# ══════════════ OS ══════════════
 .DS_Store
 Thumbs.db
+
+# ══════════════ Environment ══════════════
+.env
+.env.local
+.env.*.local
+
+# ══════════════ Logs ══════════════
+*.log
+logs/
+
+# ══════════════ SecureShift Data (generated) ══════════════
+# These are generated during scans - don't track in git
+# dashboard/data/*.json  ← REMOVED: We now commit these for GitHub Pages
