--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -1,4 +1,4 @@
-name: SecureShift Security Pipeline
+name: Security Pipeline
 
 on:
   push:
@@ -8,73 +8,92 @@ on:
 
 jobs:
   # ═══════════════════════════════════════════════════════════════
-  # Unified Security Pipeline
-  # Runs all checks in a single linear flow to avoid clutter.
+  # 1. SAST - Static Application Security Testing
   # ═══════════════════════════════════════════════════════════════
-  security-pipeline:
-    name: "🛡️ DevSecOps Pipeline (SAST + SCA + Image)"
+  sast:
+    name: "SAST"
     runs-on: ubuntu-latest
-    permissions:
-      contents: read # Read-only, no commits to repo
-      
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
+      - name: 📁 Create Report Directory
+        run: mkdir -p dashboard/data
+
+      - name: 🛡️ Run Semgrep SAST
+        continue-on-error: true
+        run: |
+          docker run --rm -v "${PWD}:/src" returntocorp/semgrep:latest \
+            semgrep scan --config=auto --json --output=/src/dashboard/data/semgrep-report.json /src/app || true
+
+      - name: 📊 Upload SAST Artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: sast-report
+          path: dashboard/data/semgrep-report.json
+          retention-days: 14
+
+  # ═══════════════════════════════════════════════════════════════
+  # 2. SCA Repo - Software Composition Analysis (Dependencies)
+  # ═══════════════════════════════════════════════════════════════
+  sca-repo:
+    name: "SCA repo"
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
+      - name: 📁 Create Report Directory
+        run: mkdir -p dashboard/data
+
+      - name: 📦 Run Trivy FS (Repo)
+        continue-on-error: true
+        run: |
+          docker run --rm -v "${PWD}:/src" aquasec/trivy:latest \
+            fs --format json --output /src/dashboard/data/trivy-fs-report.json /src || true
+
+      - name: 📊 Upload SCA Repo Artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: sca-repo-report
+          path: dashboard/data/trivy-fs-report.json
+          retention-days: 14
+
+  # ═══════════════════════════════════════════════════════════════
+  # 3. SCA Container - Container Image Scan
+  # ═══════════════════════════════════════════════════════════════
+  sca-container:
+    name: "SCA container"
+    runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout Code
         uses: actions/checkout@v4
 
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: 📁 Create Report Directory
         run: mkdir -p dashboard/data
 
-      # —————————————————————————————————————————————————————————————
-      # 1. SAST - Static Application Security Testing
-      # —————————————————————————————————————————————————————————————
-      - name: 🛡️ Run SAST (Semgrep)
-        run: |
-          echo "::group::Running Semgrep SAST"
-          docker run --rm -v "${PWD}:/src" returntocorp/semgrep:latest \
-            semgrep scan --config=auto --json --output=/src/dashboard/data/semgrep-report.json /src/app || true
-          echo "::endgroup::"
+      - name: 🏗️ Build Docker Image
+        run: docker build -t secureshift:scan .
 
-      # —————————————————————————————————————————————————————————————
-      # 2. SCA - Repository Dependencies
-      # —————————————————————————————————————————————————————————————
-      - name: 📦 Run SCA Repo (Trivy FS)
+      - name: 🐳 Run Trivy Image Scan
+        continue-on-error: true
         run: |
-          echo "::group::Running Trivy FS"
-          docker run --rm -v "${PWD}:/src" aquasec/trivy:latest \
-            fs --format json --output /src/dashboard/data/trivy-fs-report.json /src || true
-          echo "::endgroup::"
-
-      # —————————————————————————————————————————————————————————————
-      # 3. Docker Build & Container Scan
-      # —————————————————————————————————————————————————————————————
-      - name: 🏗️ Build App Container
-        run: |
-          echo "::group::Building Docker Image"
-          docker build -t secureshift:scan .
-          echo "::endgroup::"
-
-      - name: 🐳 Run SCA Image (Trivy Image)
-        run: |
-          echo "::group::Running Trivy Image Scan"
           if docker images secureshift:scan -q | grep -q .; then
              docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v "${PWD}:/src" aquasec/trivy:latest \
                image --format json --output /src/dashboard/data/trivy-image-report.json secureshift:scan || true
           else
              echo '{"Results":[]}' > dashboard/data/trivy-image-report.json
-             echo "⚠️ Image build failed or skipped, creating empty report."
           fi
-          echo "::endgroup::"
 
-      # —————————————————————————————————————————————————————————————
-      # 4. Artifact Upload
-      # —————————————————————————————————————————————————————————————
-      - name: 📊 Upload All Reports (Artifacts)
-        if: always() # Run even if scans fail
+      - name: 📊 Upload SCA Container Artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: security-dashboard-complete
-          path: dashboard/data/
+          name: sca-container-report
+          path: dashboard/data/trivy-image-report.json
           retention-days: 14
